--- a/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addwarehousezone.xhtml
@@ -62,18 +62,18 @@
                                 <p:outputLabel for="warehouse" value="Warehouse Name: " />
                             </p:column>
                             <p:column>
-                                <p:selectOneMenu id="warehouse" value="#{createStorageTypeManangedBean.selectedWarehouseId}"  style="width:210px" required="true" requiredMessage="Please select a warehouse">
+                                <p:selectOneMenu id="warehouse" value="#{createWarehouseZoneManangedBean.selectedWarehouseId}"  style="width:210px" required="true" requiredMessage="Please select a warehouse">
                                     <f:selectItem itemLabel="Select Warehouse" itemValue="" noSelectionOption="true" />
-                                    <f:selectItems value="#{createStorageTypeManangedBean.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId}   Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
+                                    <f:selectItems value="#{createWarehouseZoneManangedBean.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId}   Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
                                 </p:selectOneMenu>
                             </p:column>
                         </p:row>
                         <p:row>
                             <p:column>
-                                <p:outputLabel for="storageTypeName" style="font-weight: bold" value="Warehouse Zone Name : " />
+                                <p:outputLabel for="warehouseZoneName" style="font-weight: bold" value="Warehouse Zone Name : " />
                             </p:column>
                             <p:column>
-                                <p:inputText required="true" label="storageTypeName" requiredMessage="Warehouse Zone Name is required." id="storageTypeName" value="#{createStorageTypeManangedBean.storageTypeName}">
+                                <p:inputText required="true" label="warehouseZoneName" requiredMessage="Warehouse Zone Name is required." id="warehouseZoneName" value="#{createWarehouseZoneManangedBean.warehouseZoneName}">
                                     <f:validateLength minimum="1" maximum="25" />
                                 </p:inputText>
                             </p:column>
@@ -83,7 +83,7 @@
                                 <h:outputLabel for="description" style="font-weight: bold" value="Description: *" />
                             </p:column>
                             <p:column>
-                                <p:inputText required="true" label="description" requiredMessage="Description is required." id="description" value="#{createStorageTypeManangedBean.storagetDescription}">
+                                <p:inputText required="true" label="description" requiredMessage="Description is required." id="description" value="#{createWarehouseZoneManangedBean.storagetDescription}">
                                     <f:validateLength minimum="1" maximum="100" />
                                 </p:inputText>
                             </p:column>
@@ -91,7 +91,7 @@
 
                     </p:panelGrid>
                     <p:messages id="messages" autoUpdate="true" closable="true" />
-                    <p:commandButton id="btn" value="Create New Storage Type" update="panel" actionListener="#{createStorageTypeManangedBean.createNewStorageType}" ajax="true" />
+                    <p:commandButton id="btn" value="Create New Warehouse Zone" update="panel" actionListener="#{createWarehouseZoneManangedBean.createNewWarehouseZone(warehouse)}" ajax="true" />
                 </p:panel>
             </h:form>
         </ui:define>
