--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstockauditsforproduct.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstockauditsforproduct.xhtml
@@ -45,7 +45,7 @@
 
         <ui:define name="right">
             <h:form id="formMain">
-                <p:panel id="panel" header=" View Stocks">
+                <p:panel id="panel" header=" View Stock Audits For A Product">
                     <p:ajaxStatus style="width:16px;height:16px;">
                         <f:facet name="start">
                             <h:graphicImage value="/img/load.gif" />
@@ -55,7 +55,7 @@
                         </f:facet>
                     </p:ajaxStatus>
 
-                    <p:selectOneRadio id="myRadioID" value="#{stockViewEditManagedBean.radioValue}" layout="custom">
+                    <p:selectOneRadio id="myRadioID" value="#{stockAuditViewEditManagedBean.radioValue}" layout="custom">
                         <f:selectItem itemLabel="Choose ID" itemValue="1"/>
                         <f:selectItem itemLabel="Enter " itemValue="2"/>
                         <p:ajax process="@this" update="formMain" />
@@ -65,35 +65,40 @@
                         <p:radioButton id="id00" for="myRadioID" itemIndex="0"/>
                         <h:outputLabel for="id00" value="Choose Product ID "/>
 
-                        <p:selectOneMenu id="product" value="#{stockViewEditManagedBean.productId}"  style="width:200px" disabled="#{stockViewEditManagedBean.radioValue != '1'}">
+                        <p:selectOneMenu id="product" value="#{stockAuditViewEditManagedBean.productId}"  style="width:200px" disabled="#{stockAuditViewEditManagedBean.radioValue != '1'}">
                             <f:selectItem itemLabel="Select Product ID" itemValue="" noSelectionOption="true" />
-                            <f:selectItems value="#{stockViewEditManagedBean.productList}" var="product" itemLabel="ID:#{product.productId}   Name:#{product.productName}" itemValue="#{product.productId}"/>
-                            <p:ajax listener="#{stockViewEditManagedBean.viewStocks()}" update="stockData" />
-                            <p:ajax update="totalQuantity" />
+                            <f:selectItems value="#{stockAuditViewEditManagedBean.productList}" var="product" itemLabel="ID:#{product.productId}   Name:#{product.productName}" itemValue="#{product.productId}"/>
+                            <p:ajax listener="#{stockAuditViewEditManagedBean.viewStocks()}" update="stockData" />
                         </p:selectOneMenu>
 
                         <p:radioButton id="id01" for="myRadioID" itemIndex="1"/>
                         <h:outputLabel for="id01" value="Enter Product ID "/>
-                        <p:inputText id="input01" value="#{stockViewEditManagedBean.productId}" disabled="#{stockViewEditManagedBean.radioValue != '2'}">
-                            <p:ajax listener="#{stockViewEditManagedBean.viewStocks()}" update="stockData" />
-                            <p:ajax update="totalQuantity" />
+                        <p:inputText id="input01" value="#{stockAuditViewEditManagedBean.productId}" disabled="#{stockAuditViewEditManagedBean.radioValue != '2'}">
+                            <p:ajax listener="#{stockAuditViewEditManagedBean.viewStocks()}" update="stockData" />
                         </p:inputText>
                     </h:panelGrid>
 
-                    <p:dataTable id="stockData" var="stock" sortMode="multiple" editable="true" value="#{stockViewEditManagedBean.stocks}" 
+                    <p:dataTable id="stockData" var="stock" sortMode="multiple" editable="true" value="#{stockAuditViewEditManagedBean.stocks}" 
                                  widgetVar="stockTable"
                                  emptyMessage="No such stock found"
                                  rowKey="#{stock.stockId}">
 
                         <f:facet name="header">                    
                             <p:outputPanel>
-                                <h:outputText value="Search Stock fields:" />
+                                <h:outputText value="Search Stock Audit fields:" />
                                 <p:inputText id="globalFilter" onkeyup="PF('stockTable').filter()" />
                             </p:outputPanel>
                         </f:facet>
 
-                        <p:ajax event="rowEdit" listener="#{stockViewEditManagedBean.onRowEdit}" />
-                        <p:ajax event="rowEditCancel" listener="#{stockViewEditManagedBean.onRowCancel}"/>                
+                        <p:ajax event="rowEdit" listener="#{stockAuditViewEditManagedBean.onRowEdit}" />
+                        <p:ajax event="rowEditCancel" listener="#{stockAuditViewEditManagedBean.onRowCancel}"/>                
+
+                        <p:column  filterBy="#{stockAuditViewEditManagedBean.scheduledDate}" filterMatchMode="contains" headerText="Stock Name">
+                            <p:cellEditor>
+                                <f:facet name="output"><h:outputText value="#{stockAuditViewEditManagedBean.scheduledDate}" /></f:facet>
+                                <f:facet name="input"><p:inputText value="#{stockAuditViewEditManagedBean.scheduledDate}" style="width:100%" label="Stock Name"/></f:facet>
+                            </p:cellEditor>
+                        </p:column>
 
                         <p:column filterBy="#{stock.storageBin.storageTypestorageTypeId.warehousewarehouseId.warehouseId}" filterMatchMode="contains" headerText="Warehouse" >
                             <h:outputText value="ID: #{stock.storageBin.storageTypestorageTypeId.warehousewarehouseId.warehouseId} Name: #{stock.storageBin.storageTypestorageTypeId.warehousewarehouseId.name}"  />
@@ -135,9 +140,9 @@
                                 <f:facet name="input"><p:calendar id="expiryDate" value="#{stock.expiryDate}" /></f:facet>
                             </p:cellEditor>
                         </p:column>
-                        
+
                         <p:column style="width:48px">
-                            <p:commandButton action="#{stockViewEditManagedBean.deleteStock(stock)}" update="stockData" oncomplete="updateQuantity()" icon = "ui-icon-trash"  >
+                            <p:commandButton action="#{stockAuditViewEditManagedBean.deleteStock(stock)}" update="stockData" oncomplete="updateQuantity()" icon = "ui-icon-trash"  >
 
                                 <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this stock?" icon="ui-icon-alert" />
                             </p:commandButton> 
@@ -146,7 +151,6 @@
                                 <p:commandButton value="No" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
                             </p:confirmDialog>
                         </p:column> 
-                        <!--                        <p:remoteCommand name="updateQuantity" update="totalQuantity" />-->
                         <p:column style="width:42px">
                             <p:rowEditor />
                         </p:column>
@@ -154,7 +158,6 @@
 
                     <p:messages id="messages" autoUpdate="true" closable="true" />
                     <br></br>
-                    <h:outputLabel id="totalQuantity" value="Total Quantity: #{stockViewEditManagedBean.totalQuantity}" />
                 </p:panel>
             </h:form>
         </ui:define>
