--- a/MerlionPortal/MerlionPortal-war/web/crms/viewallservicepos.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewallservicepos.xhtml
@@ -108,7 +108,7 @@
                             </p:outputPanel>
                         </f:facet>
 
-                        <p:column filterBy="#{poR.servicePOId}" headerText="Contract ID" filterMatchMode="contains">
+                        <p:column filterBy="#{poR.servicePOId}" headerText="PO ID" filterMatchMode="contains">
                             <h:outputText value="#{poR.servicePOId}" />
                         </p:column>
                         <p:column filterBy="#{poR.senderCompanyId}" headerText="Sender ID" filterMatchMode="contains">
