--- a/MerlionPortal/MerlionPortal-war/web/crms/viewinvoicedetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewinvoicedetail.xhtml
@@ -120,8 +120,8 @@
 
                     </h:panelGrid>
                 </p:fieldset>
-                <p:commandButton value="Record Payment Info" action="" />
-                <p:commandButton value="Update payment status" action="" />
+                <p:commandButton value="Record Payment Info"  />
+                <p:commandButton value="Update payment status" />
             </h:form>
 
         </ui:define>
