--- a/MerlionPortal/MerlionPortal-war/web/crms/viewcontractdetail.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewcontractdetail.xhtml
@@ -46,6 +46,10 @@
                         <p:menuitem value="View All Orders" url="viewallservicepos.xhtml" />
                         <p:menuitem value="View All Invoices" url="viewallinvoices.xhtml" />
                     </p:submenu>
+                    <p:submenu label="Key Account Management" styleClass="display:block">
+                        <p:menuitem value="View Order Statistics" url="vieworderstatistics.xhtml" />
+                        <p:menuitem value="Create Key Account" url="createkeyaccount.xhtml" />
+                    </p:submenu>
                 </p:panelMenu>
             </h:form>
         </ui:define>
