--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -41,6 +41,10 @@
                     <p:menuitem value="Add Stock" url="addstock.xhtml"/>
                     <p:menuitem value="View Stock" url="viewstock.xhtml"/>
                 </p:submenu>
+                <p:submenu label="Stock Audit" styleClass="display:block" >
+                    <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
+                    <p:menuitem value="View Stock Audit Schedule" url="viewstockauditschedule.xhtml"/>
+                </p:submenu>
             </p:panelMenu>
         </ui:define>
         
