--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstock.xhtml
@@ -40,6 +40,10 @@
                     <p:menuitem value="Add Stock" url="addstock.xhtml"/>
                     <p:menuitem value="View Stock" url="viewstock.xhtml"/>
                 </p:submenu>
+                <p:submenu label="Stock Audit" styleClass="display:block" >
+                    <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
+                    <p:menuitem value="View Stock Audit Schedule" url="viewstockauditschedule.xhtml"/>
+                </p:submenu>
             </p:panelMenu>
         </ui:define>
 
@@ -95,11 +99,11 @@
                         <p:ajax event="rowEdit" listener="#{stockViewEditManagedBean.onRowEdit}" />
                         <p:ajax event="rowEditCancel" listener="#{stockViewEditManagedBean.onRowCancel}"/>                
 
-                        <p:column filterBy="#{stock.storageBin.storageTypestorageTypeId.warehousewarehouseId.warehouseId}" filterMatchMode="contains" headerText="Warehouse" >
-                            <h:outputText value="ID: #{stock.storageBin.storageTypestorageTypeId.warehousewarehouseId.warehouseId} Name: #{stock.storageBin.storageTypestorageTypeId.warehousewarehouseId.name}"  />
+                        <p:column filterBy="#{stock.storageBin.warehouseZone.warehouse.warehouseId}" filterMatchMode="contains" headerText="Warehouse" >
+                            <h:outputText value="ID: #{stock.storageBin.warehouseZone.warehouse.warehouseId} Name: #{stock.storageBin.warehouseZone.warehouse.name}"  />
                         </p:column>
-                        <p:column filterBy="#{stock.storageBin.storageTypestorageTypeId.storageTypeId}" filterMatchMode="contains" headerText="Warehouse Zone" >
-                            <h:outputText value="ID: #{stock.storageBin.storageTypestorageTypeId.storageTypeId} Name:#{stock.storageBin.storageTypestorageTypeId.name} " />
+                        <p:column filterBy="#{stock.storageBin.warehouseZone.warehouseZoneId}" filterMatchMode="contains" headerText="Warehouse Zone" >
+                            <h:outputText value="ID: #{stock.storageBin.warehouseZone.warehouseZoneId} Name:#{stock.storageBin.warehouseZone.warehouseZoneId} " />
                         </p:column>
                         <p:column filterBy="#{stock.storageBin.storageBinId}" filterMatchMode="contains" headerText="Storage Bin ID" >
                             <h:outputText value="ID: #{stock.storageBin.storageBinId} Name:#{stock.storageBin.binName} " />
