--- a/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
@@ -21,7 +21,7 @@
         </ui:define>
 
         <ui:define name="left">
-                    <p:panelMenu>
+            <p:panelMenu>
                 <p:submenu label =" WMS HOME" styleClass="display:block">
                     <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
                 </p:submenu>
@@ -40,6 +40,10 @@
                 <p:submenu label="Stock" styleClass="display:block" >
                     <p:menuitem value="Add Stock" url="addstock.xhtml"/>
                     <p:menuitem value="View Stock" url="viewstock.xhtml"/>
+                </p:submenu>
+                <p:submenu label="Stock Audit" styleClass="display:block" >
+                    <p:menuitem value="Create Stock Audit" url="createstockaudit.xhtml"/>
+                    <p:menuitem value="View Stock Audit Schedule" url="viewstockauditschedule.xhtml"/>
                 </p:submenu>
             </p:panelMenu>
         </ui:define>
